# xp-getentropy

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  LICENSE  README.md  appveyor-ci.sh  appveyor.yml  cross_wasm.txt  emscripten.cross  go.sh  meson.build
.appveyor/: appveyor-ci.sh  appveyor.yml
.builds/: alpine.yml  freebsd.yml  openbsd.yml
.github/workflows/: ci.yaml
documentation/: Doxyfile.in
include/: getentropy_xp.h  xp_getentropy.h
source/: getentropy_bcryptgenrandom.c  getentropy_getentropy.c  getentropy_getentropy_macos.c  getentropy_getentropy_sysrandom.c  getentropy_getentropy_wasm.c  getentropy_getrandom.c  getentropy_rtlgenrandom.c  getentropy_sysctl.c  getentropy_urandom.c
subprojects/: unity.wrap
subprojects/unity/: meson.build  unity.c
test/: asking_for_257.c  basic.c  t_basic.c  t_more.c
